--- a/amstory/src/main/res/values/strings.xml
+++ b/amstory/src/main/res/values/strings.xml
@@ -7,4 +7,19 @@
 
     <string name="start_marker">Start marker</string>
     <string name="end_marker">End marker</string>
+
+    <string-array name="jazzy_effects">
+        <item>Standard</item>
+        <item>Tablet</item>
+        <item>CubeIn</item>
+        <item>CubeOut</item>
+        <item>FlipVertical</item>
+        <item>FlipHorizontal</item>
+        <item>Stack</item>
+        <item>ZoomIn</item>
+        <item>ZoomOut</item>
+        <item>RotateUp</item>
+        <item>RotateDown</item>
+        <item>Accordion</item>
+    </string-array>
 </resources>
